<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name_with_version">JBomb v0.3.0</string>
    <string name="action_settings">Settings</string>
    <string name="play">¡Jugar!</string>
    <string name="settings">Configuración</string>
    <string name="inet_ip_address">Dirección IP</string>
    <string name="inet_port">Puerto</string>
    <string name="inet_ip_address_hint">Ingrese la dirección IP del servidor</string>
    <string name="inet_port_hint">Ingrese el puerto del servidor</string>
    <string name="title_activity_ingame">IngameActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="todo">TODO</string>
    <string name="title_activity_client_settings">Configuración</string>
    <string name="cancel">Cancelar</string>
    <string name="save">Guardar</string>
    <string name="title_activity_quiz">¡Tenes la bomba!</string>
    <string name="title_activity_game_over">Juego terminado!</string>
    <string name="player_top_name">Martín</string>
    <string name="player_right_name">Florencia</string>
    <string name="player_bottom_name">Alejandro</string>
    <string name="player_left_name">Lucrecia</string>
    <string name="Servidor">server</string>
    <string name="server">Servidor</string>
    <string name="you_have_the_bomb">¡Tienes la bomba!</string>
    <string name="the_bomb">TheBomb</string>
    <string name="app_name">JBomb</string>
    <string name="quiz_question_default">quiz_question_default</string>
    <string name="send_answer">Enviar respuesta</string>
    <string name="correct_answer">¡Correcto!</string>
    <string name="incorrect_answer">¡Respuesta incorrecta!</string>
    <string name="notification_text_default">notificationTextDefault</string>
    <string name="title_activity_game_selection">GameSelectionActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="select_game">Seleccione un juego...</string>
    <string name="connect">¡Conectar!</string>
    <string name="player_name">Nombre del jugador</string>
    <string name="title_activity_players_loading">PlayersLoadingActivity</string>
    <string name="loading_players">Cargando jugadores...</string>
    <string name="waiting_for_players">Esperando a los demas jugadores...</string>
    <string name="title_activity_new_game">NewGameActivity</string>
    <string name="create_new_game">Crear nuevo juego</string>
    <string name="new_game_name">Nombre del Juego</string>
    <string name="new_game_topology">Topología</string>
    <string name="new_game_quiz">Cuestionario</string>
    <string name="new_game_mode">Modo</string>
    <string name="new_game_max_players_allowed">Jugadores (máx.)</string>
    <string name="new_game_max_rounds">Rondas</string>
    <string name="new_game_round_duration">Duración</string>
    <string name="new_game">Nuevo juego</string>
    <string name="create_game">Crear juego</string>
    <string name="title_activity_game_positions">GamePositionsActivity</string>
    <string name="game_positions">Tabla de posiciones</string>
    <string name="title_activity_explosion">ExplosionActivity</string>
    <string name="title_activity_intro">IntroActivity</string>

</resources>
